User can move through a maze  -For now, can still walk through walls - need to fix

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,12 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="colorPath">
+        #DABD6D
+    </color>
+
+    <color name="colorWall">
+        #725E43
+    </color>
 </resources>
