Added game over mechanic
Achieved by either:
1. dying to an enemy
2. getting to the exit

Can either:
1. play again (restart app)
2. exit (close app)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,8 @@
     <color name="colorWall">
         #725E43
     </color>
+
+    <color name="colorExit">
+        #00FF00
+    </color>
 </resources>
