--- a/app/src/main/res/layout-land/fragment_labyrinth.xml
+++ b/app/src/main/res/layout-land/fragment_labyrinth.xml
@@ -55,9 +55,10 @@
             </ImageView>
 
             <ImageView
+                android:id="@+id/player_map_block"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:background="#ff0000">
+                android:background="#dabd6d">
             </ImageView>
 
             <ImageView
@@ -98,40 +99,83 @@
         android:layout_toRightOf="@+id/frameLayout"
         android:layout_toEndOf="@+id/frameLayout">
 
-        <ImageButton
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:id="@+id/up_button"
-            android:layout_marginTop="47dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:background="@mipmap/ic_up_arrow"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:id="@+id/relativeLayout">
 
-        <ImageButton
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:id="@+id/down_button"
-            android:layout_below="@+id/up_button"
-            android:layout_centerHorizontal="true"
-            android:background="@mipmap/ic_down_arrow"/>
+            <ImageView
+                android:layout_width="200dp"
+                android:layout_height="30dp"
+                android:id="@+id/imageView2"
+                android:background="#e70000"
+                android:layout_alignTop="@+id/player_health_image_view"
+                android:layout_centerHorizontal="true"/>
 
-        <ImageButton
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:id="@+id/left_button"
-            android:layout_alignTop="@+id/down_button"
-            android:layout_toLeftOf="@+id/down_button"
-            android:layout_toStartOf="@+id/down_button"
-            android:background="@mipmap/ic_left_arrow"/>
+            <ImageView
+                android:layout_width="200dp"
+                android:layout_height="30dp"
+                android:id="@+id/player_health_image_view"
+                android:background="#00a339"
+                android:layout_centerVertical="true"
+                android:layout_alignLeft="@+id/imageView2"
+                android:layout_alignStart="@+id/imageView2"/>
 
-        <ImageButton
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:id="@+id/right_button"
-            android:layout_alignTop="@+id/down_button"
-            android:layout_toRightOf="@+id/down_button"
-            android:layout_toEndOf="@+id/down_button"
-            android:background="@mipmap/ic_right_button"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Player"
+                android:id="@+id/textView"
+                android:textStyle="bold"
+                android:layout_above="@+id/imageView2"
+                android:layout_alignLeft="@+id/imageView2"
+                android:layout_alignStart="@+id/imageView2"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_below="@+id/relativeLayout"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
+
+            <ImageButton
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:id="@+id/up_button"
+                android:background="@mipmap/ic_up_arrow"
+                android:layout_above="@+id/down_button"
+                android:layout_centerHorizontal="true"/>
+
+            <ImageButton
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:id="@+id/down_button"
+                android:background="@mipmap/ic_down_arrow"
+                android:layout_alignParentBottom="true"
+                android:layout_alignLeft="@+id/up_button"
+                android:layout_alignStart="@+id/up_button"/>
+
+            <ImageButton
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:id="@+id/left_button"
+                android:background="@mipmap/ic_left_arrow"
+                android:layout_below="@+id/up_button"
+                android:layout_toLeftOf="@+id/down_button"
+                android:layout_toStartOf="@+id/down_button"/>
+
+            <ImageButton
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:id="@+id/right_button"
+                android:layout_alignTop="@+id/down_button"
+                android:layout_toRightOf="@+id/down_button"
+                android:layout_toEndOf="@+id/down_button"
+                android:background="@mipmap/ic_right_button"/>
+        </RelativeLayout>
+
     </RelativeLayout>
 
 </RelativeLayout>
