--- a/app/src/main/res/layout-land/fragment_combat.xml
+++ b/app/src/main/res/layout-land/fragment_combat.xml
@@ -17,7 +17,7 @@
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:background="#bdbdbd"/>
+            android:background="#dabd6d"/>
 
         <TextView
             android:layout_width="wrap_content"
