Added title screen where player can start new game or load old game Loading old games under construction Added player creation screen where player can set a name to their own character

--- a/app/src/main/res/layout-land/fragment_labyrinth.xml
+++ b/app/src/main/res/layout-land/fragment_labyrinth.xml
@@ -126,7 +126,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Player"
-                android:id="@+id/textView"
+                android:id="@+id/labyrinth_player_name_text_view"
                 android:textStyle="bold"
                 android:layout_above="@+id/imageView2"
                 android:layout_alignLeft="@+id/imageView2"
