--- a/app/src/main/res/layout-land/fragment_combat.xml
+++ b/app/src/main/res/layout-land/fragment_combat.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:background="@color/colorBackground"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
@@ -58,6 +59,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/colorAccent"
             android:text="Attack"
             android:id="@+id/player_attack_button"
             android:layout_centerVertical="true"
