--- a/app/src/main/res/layout-land/fragment_title_screen.xml
+++ b/app/src/main/res/layout-land/fragment_title_screen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:background="@color/colorBackground"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -24,6 +25,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/colorAccent"
         android:text="New Game"
         android:id="@+id/button_new_game"
         android:layout_below="@+id/textView2"
@@ -33,6 +35,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/colorAccent"
         android:text="Load Save"
         android:id="@+id/button_load_save"
         android:layout_below="@+id/button_new_game"
