Can now load and play previous characters
Database now stores old characters even upon app shutdown

--- a/app/src/main/res/layout-land/fragment_labyrinth.xml
+++ b/app/src/main/res/layout-land/fragment_labyrinth.xml
@@ -173,7 +173,7 @@
                 android:layout_alignTop="@+id/down_button"
                 android:layout_toRightOf="@+id/down_button"
                 android:layout_toEndOf="@+id/down_button"
-                android:background="@mipmap/ic_right_button"/>
+                android:background="@mipmap/ic_right_arrow"/>
         </RelativeLayout>
 
     </RelativeLayout>
